# PyLuthor

./: README.md  afd.py  article.aux  article.bbl  article.blg  article.tex  example.md  main.py  morphemes.py  pyproject.toml
.github/workflows/: python-CD.yml  python-CI.yml
luthor/: compiler.py  latex.py  lexing.py  parsing.py  scanning.py
luthor/latex/: __init__.py  compiler.py  nodes.py
luthor/markdown/: parser.py
tests/: example.md  test_latex.py  test_lexing.py  test_scanning.py
trash/: main.py  main2.py
trash/luthor/: lexing.py  scanning.py
trash/tests/: _test_lexing.py  _test_scanning.py
