[tool.poetry]
name = "pyluthor"
version = "0.2.0"
description = "Markdown compiler"
authors = ["eric-hermosis <eric.hermosis@gmail.com>"]
license = "Apache-2.0"
 
packages = [
    { include = "luthor" }
]

[tool.poetry.dependencies]
python = ">=3.12" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
tests = [
    "pytest (>=9.0.2,<10.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
